force-app/main/default/objects/Account/fields/AtivoInvestimentos__c.field-meta.xml
<CustomField>
    <fullName>AtivoInvestimentos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ativo Investimentos</label>
    <type>Checkbox</type>
</CustomField>