force-app/main/default/objects/Account/fields/AtivoOperacesEstruturadas__c.field-meta.xml
<CustomField>
    <fullName>AtivoOperacesEstruturadas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ativo Operações estruturadas</label>
    <type>Checkbox</type>
</CustomField>