force-app/main/default/objects/Account/fields/AtivoProdutosFinanceiros__c.field-meta.xml
<CustomField>
    <fullName>AtivoProdutosFinanceiros__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ativo Produtos financeiros</label>
    <type>Checkbox</type>
</CustomField>