force-app/main/default/objects/Account/fields/BairroCobranca__c.field-meta.xml
<CustomField>
    <fullName>BairroCobranca__c</fullName>
    <label>Bairro de cobrança</label>
    <length>100</length>
    <type>Text</type>
</CustomField>