force-app/main/default/objects/Account/fields/CidadeNascimento__c.field-meta.xml
<CustomField>
    <fullName>CidadeNascimento__c</fullName>
    <label>Cidade de nascimento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>