force-app/main/default/objects/Account/fields/ComplementoCobranca__c.field-meta.xml
<CustomField>
    <fullName>ComplementoCobranca__c</fullName>
    <label>Complemento de cobrança</label>
    <length>100</length>
    <type>Text</type>
</CustomField>