force-app/main/default/objects/Account/fields/ContaPrime__c.field-meta.xml
<CustomField>
    <fullName>ContaPrime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conta Prime</label>
    <type>Checkbox</type>
</CustomField>