force-app/main/default/objects/Account/fields/DataAbertura__c.field-meta.xml
<CustomField>
    <fullName>DataAbertura__c</fullName>
    <label>Data de abertura</label>
    <type>Date</type>
</CustomField>