force-app/main/default/objects/Account/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <externalId>true</externalId>
    <label>Documento</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>