force-app/main/default/objects/Account/fields/FaturamentoAnual__c.field-meta.xml
<CustomField>
    <fullName>FaturamentoAnual__c</fullName>
    <label>Faturamento anual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>