force-app/main/default/objects/Account/fields/FaturamentoMensal__c.field-meta.xml
<CustomField>
    <fullName>FaturamentoMensal__c</fullName>
    <label>Faturamento mensal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>