force-app/main/default/objects/Account/fields/IdCelcoinBusiness__c.field-meta.xml
<CustomField>
    <fullName>IdCelcoinBusiness__c</fullName>
    <label>IdCelcoinBusiness</label>
    <length>50</length>
    <type>Text</type>
</CustomField>