force-app/main/default/objects/Account/fields/IdCelcoinPerson__c.field-meta.xml
<CustomField>
    <fullName>IdCelcoinPerson__c</fullName>
    <label>IdCelcoinPerson</label>
    <length>50</length>
    <type>Text</type>
</CustomField>