force-app/main/default/objects/Account/fields/NomeContaFormula__c.field-meta.xml
<CustomField>
    <fullName>NomeContaFormula__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id, 
    IF(
        ISBLANK(Name), 
        FirstName &amp; &quot; &quot; &amp; LastName, 
        Name
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Conta</label>
    <type>Text</type>
</CustomField>