force-app/main/default/objects/Account/fields/NomeMae__c.field-meta.xml
<CustomField>
    <fullName>NomeMae__c</fullName>
    <label>Nome da mãe</label>
    <length>50</length>
    <type>Text</type>
</CustomField>