force-app/main/default/objects/Account/fields/NumeroCobranca__c.field-meta.xml
<CustomField>
    <fullName>NumeroCobranca__c</fullName>
    <description>Campo criado para preenchimento de endereço completo para envio de oportunidades para sistemas da Euro.</description>
    <label>Número de cobrança</label>
    <length>20</length>
    <type>Text</type>
</CustomField>