force-app/main/default/objects/Account/fields/Parceiro__c.field-meta.xml
<CustomField>
    <fullName>Parceiro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parceiro</label>
    <type>Checkbox</type>
</CustomField>