force-app/main/default/objects/Account/fields/ProdutosInteresse__c.field-meta.xml
<CustomField>
    <fullName>ProdutosInteresse__c</fullName>
    <label>Produtos de Interesse</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antecipação de recebíveis</fullName>
            </value>
            <value>
                <fullName>Conta Escrow</fullName>
            </value>
            <value>
                <fullName>Giro Parcelado</fullName>
            </value>
            <value>
                <fullName>Capital de Giro</fullName>
            </value>
            <value>
                <fullName>Financiamento de imóvel</fullName>
            </value>
            <value>
                <fullName>Financiamento de veículo</fullName>
            </value>
            <value>
                <fullName>Empréstimo com imóvel em garantia</fullName>
            </value>
            <value>
                <fullName>Empréstimo com veiculo em garantia</fullName>
            </value>
            <value>
                <fullName>Empréstimo com veiculo pesado em garantia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>