force-app/main/default/objects/Account/fields/RamoAtividade__c.field-meta.xml
<CustomField>
    <fullName>RamoAtividade__c</fullName>
    <label>Ramo de atividade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>