force-app/main/default/objects/Account/fields/StatusConta__c.field-meta.xml
<CustomField>
    <fullName>StatusConta__c</fullName>
    <label>Status Conta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>