force-app/main/default/objects/Account/fields/StatusParceiro__c.field-meta.xml
<CustomField>
    <fullName>StatusParceiro__c</fullName>
    <label>Status do parceiro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em cadastro</fullName>
                <default>true</default>
                <label>Em cadastro</label>
            </value>
            <value>
                <fullName>Em análise</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>