force-app/main/default/objects/Account/fields/TipoInvestimentos__c.field-meta.xml
<CustomField>
    <fullName>TipoInvestimentos__c</fullName>
    <label>Tipo Investimentos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>