force-app/main/default/objects/Account/fields/TipoParceiro__c.field-meta.xml
<CustomField>
    <fullName>TipoParceiro__c</fullName>
    <label>Tipo de parceiro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corretor autônomo</fullName>
            </value>
            <value>
                <fullName>Portais</fullName>
            </value>
            <value>
                <fullName>Construtora</fullName>
            </value>
            <value>
                <fullName>Imobiliária</fullName>
            </value>
            <value>
                <fullName>Assessoria</fullName>
            </value>
            <value>
                <fullName>Banco</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>