force-app/main/default/objects/Account/fields/TipoProdutosFinanceiros__c.field-meta.xml
<CustomField>
    <fullName>TipoProdutosFinanceiros__c</fullName>
    <label>Tipo Produtos Financeiros</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>