force-app/main/default/objects/Account/fields/TipoSecuritizadora__c.field-meta.xml
<CustomField>
    <fullName>TipoSecuritizadora__c</fullName>
    <label>Tipo Securitizadora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>