force-app/main/default/objects/Account/validationRules/LimitarCaracteres.validationRule-meta.xml
<ValidationRule>
    <fullName>LimitarCaracteres</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Documento__c)),
    NOT(OR(
        LEN(Documento__c) = 11,
        LEN(Documento__c) = 15,
								LEN(Documento__c) = 14,
								LEN(Documento__c) = 18
								
    ))
)</errorConditionFormula>
    <errorDisplayField>Documento__c</errorDisplayField>
    <errorMessage>Preencha o campo com um CPF ou CNPJ válido.</errorMessage>
</ValidationRule>