force-app/main/default/objects/Account/validationRules/ValidaMascaraTelefone.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaMascaraTelefone</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    TelefoneInternacional__c = false,
				NOT(ISBLANK(Phone)),
    NOT(REGEX(Phone, &apos;\\({1}[0-9]{2}\\){1} [0-9]{4}-[0-9]{4}&apos;))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Telefone inválido. Digite apenas os números do DDD e Telefone no padrão (00) 0000-0000.</errorMessage>
</ValidationRule>