force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>TipoParceiro__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TipoPessoa__c</field>
        <operation>equals</operation>
        <value>Pessoa Jurídica</value>
    </filters>
    <label>Todas as contas</label>
</ListView>