force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Mine</filterScope>
    <label>Minhas contas</label>
</ListView>